@@ -4,10 +4,10 @@ plugins {
   id 'eclipse-wtp'
   id 'com.github.ben-manes.versions' version '0.52.0'
   id 'com.google.osdetector' version '1.7.3'
-  id 'com.diffplug.spotless' version '7.2.1'
+  id 'com.diffplug.spotless' version '8.0.0'
   id 'net.nemerosa.versioning' version '3.1.0'
   id 'org.openapi.generator' version '7.15.0'
-  id 'org.owasp.dependencycheck' version '12.1.3'
+  id 'org.owasp.dependencycheck' version '12.1.6'
 }
 
 group = 'net.reini'
@@ -16,7 +16,7 @@ description = "Sandbox project for pure testing purposes"
 ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_21
+  sourceCompatibility = JavaVersion.VERSION_25
   withJavadocJar()
   withSourcesJar()
 }
@@ -44,7 +44,7 @@ dependencies {
   jdbcDrivers 'com.oracle.database.jdbc:ojdbc10:19.28.0.0'
   jdbcDrivers 'com.oracle.database.jdbc:ojdbc11:21.16.0.0'
   jdbcDrivers 'com.oracle.database.jdbc:ojdbc17:23.9.0.25.07'
-  jdbcDrivers 'org.postgresql:postgresql:42.7.7'
+  jdbcDrivers 'org.postgresql:postgresql:42.7.8'
 
   implementation 'com.airhacks:afterburner.fx:1.7.0'
   implementation 'com.github.sarxos:webcam-capture:0.3.12'
@@ -96,7 +96,7 @@ dependencies {
   compileOnly 'jakarta.websocket:jakarta.websocket-client-api:2.2.0'
 
   runtimeOnly 'ch.qos.logback:logback-classic:1.5.18'
-  runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
+  runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.6'
   runtimeOnly 'org.glassfish.jersey.core:jersey-client:3.1.11'
   runtimeOnly 'org.glassfish.jersey.media:jersey-media-json-binding:3.1.11'
   runtimeOnly 'org.glassfish.tyrus.bundles:tyrus-standalone-client:2.2.0'
@@ -110,9 +110,9 @@ dependencies {
   testImplementation 'net.jqwik:jqwik:1.9.3'
   testImplementation 'org.assertj:assertj-core:3.27.6'
   testImplementation 'org.jmockit:jmockit:1.50'
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.4'
-  testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.13.4'
-  testImplementation 'org.mockito:mockito-junit-jupiter:5.19.0'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.0'
+  testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:6.0.0'
+  testImplementation 'org.mockito:mockito-junit-jupiter:5.20.0'
   testImplementation 'org.shredzone.acme4j:acme4j-client:3.5.1'
 
   testImplementation 'jakarta.websocket:jakarta.websocket-client-api:2.2.0'
@@ -121,15 +121,15 @@ dependencies {
   testRuntimeOnly 'ch.qos.logback:logback-classic:1.5.18'
   testRuntimeOnly 'com.tngtech.archunit:archunit-junit5:1.4.1'
   testRuntimeOnly 'jakarta.platform:jakarta.jakartaee-api:10.0.0'
-  testRuntimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
+  testRuntimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.6'
   testRuntimeOnly 'org.glassfish.jersey.core:jersey-client:3.1.11'
   testRuntimeOnly 'org.glassfish.jersey.media:jersey-media-json-binding:3.1.11'
   testRuntimeOnly 'org.glassfish.tyrus.bundles:tyrus-standalone-client:2.2.0'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.4'
-  testRuntimeOnly 'org.junit.platform:junit-platform-jfr:1.13.4'
-  testRuntimeOnly 'org.junit.platform:junit-platform-runner:1.13.4', { exclude group: "junit", module: "junit" }
-  testRuntimeOnly 'org.junit.platform:junit-platform-console:1.13.4'
-  testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.13.4'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.0'
+  testRuntimeOnly 'org.junit.platform:junit-platform-jfr:1.14.0'
+  testRuntimeOnly 'org.junit.platform:junit-platform-runner:1.14.0', { exclude group: "junit", module: "junit" }
+  testRuntimeOnly 'org.junit.platform:junit-platform-console:1.14.0'
+  testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:6.0.0'
   testRuntimeOnly "org.slf4j:jcl-over-slf4j:2.0.17"
   testRuntimeOnly 'org.eclipse:yasson:3.0.4'
 }
@@ -172,6 +172,7 @@ tasks.withType(Test).each {
   it.useJUnitPlatform()
   it.systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
   it.jvmArgs += "-XX:StartFlightRecording:filename=${layout.buildDirectory.get().asFile}/reports/${name}.jfr"
+  it.jvmArgs += '--enable-preview'
   it.testLogging {
     events 'failed', 'skipped', 'passed'
   }
@@ -206,13 +207,14 @@ openApiGenerate {
   invokerPackage = "org.openapi.example.invoker"
   modelPackage = "org.openapi.example.model"
   configOptions = [
-        'dateLibrary'                       : 'java8',
-        'openApiNullable'                   : 'false',
-        'serializableModel'                 : 'true',
-        'useJakartaEe'                      : 'true',
-        'useMicroProfileOpenAPIAnnotations' : 'true',
-        'useOptional'                       : 'true',
-        'useSwaggerAnnotations'             : 'false'
+        dateLibrary                       : 'java8',
+        interfaceOnly                     : 'true',
+        openApiNullable                   : 'false',
+        serializableModel                 : 'true',
+        useJakartaEe                      : 'true',
+        useMicroProfileOpenAPIAnnotations : 'true',
+        useOptional                       : 'true',
+        useSwaggerAnnotations             : 'false'
   ]
 }
 
